<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.slayff.starenglish.Activity.LessonShowerActivity"
    android:background="@drawable/gradient_1">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnameles1"
                android:id="@+id/bt_les1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnameles2"
                android:id="@+id/bt_les2"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnameles3"
                android:id="@+id/bt_les3"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnameles4"
                android:id="@+id/bt_les4"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnameles5"
                android:id="@+id/bt_les5"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnameles6"
                android:id="@+id/bt_les6"
                android:enabled="false"
                 />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnameles7"
                android:id="@+id/bt_les7"
                android:enabled="false" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnameles8"
                android:id="@+id/bt_les8"
                android:enabled="false" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
