<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/a_logo_2"
        android:scaleType="fitCenter"
        android:layout_above="@+id/bt_statistic"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/bt_alphabet" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnameLessons"
        android:id="@+id/bt_lessons"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnameVerbs"
        android:id="@+id/bt_verbs"
        android:layout_below="@+id/bt_lessons"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnameTenses"
        android:id="@+id/bt_tenses"
        android:layout_below="@+id/bt_verbs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnameAlphabet"
        android:id="@+id/bt_alphabet"
        android:layout_below="@+id/bt_tenses"
        android:layout_alignLeft="@+id/bt_tenses"
        android:layout_alignStart="@+id/bt_tenses"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnameStatistic"
        android:id="@+id/bt_statistic"
        android:layout_above="@+id/bt_about"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnameAbout"
        android:id="@+id/bt_about"
        android:layout_alignParentBottom="true"

        />

</RelativeLayout>
