<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/gradient_1">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Вопрос №"
        android:id="@+id/text_num_q"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:gravity="center" />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/CORQTitleOfQuestion"
            android:id="@+id/text_title_cor"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="15dp"
            android:textColor="#B32400" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/text_base"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text_title_cor"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            android:fontFamily="Palatino"
            android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnamehint"
        android:id="@+id/bt_hint"
        android:layout_below="@id/text_base"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_user"
        android:layout_below="@+id/bt_hint"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/CORhint"
        android:maxLines="1"
        android:textAlignment="gravity"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnamenext"
        android:id="@+id/bt_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="10dp"
        />


</RelativeLayout>