<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/gradient_1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Вопрос №"
        android:id="@+id/text_num_q"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:gravity="center" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/YNQTitleOfQuestion"
        android:id="@+id/text_title_yn"
        android:gravity="center"
        android:layout_marginTop="50dp"

        android:focusable="false"
        android:textSize="15dp"
        android:textColor="#B32400" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/text_eng_word"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="Palatino"
        android:textSize="30dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/equals"
        android:id="@+id/textequals"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/text_rus_word"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:gravity="center" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:id="@+id/radioGroupYN">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobtnameY"
            android:id="@+id/radioY"
            android:layout_marginRight="10dp"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobtnameN"
            android:id="@+id/radioN"
            android:layout_marginLeft="10dp"
            android:textSize="20dp" />

    </RadioGroup>

</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnamenext"
        android:id="@+id/bt_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="10dp"
         />
</RelativeLayout>
