<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="ОТЛИЧНО!"
        android:id="@+id/text_short_result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Вы правильно ответили на 100% вопросов"
        android:id="@+id/text_full_result"
        android:layout_below="@+id/text_short_result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#B32400" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/text_full_result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/textnamelessonstat"
        android:textColor="#B32400" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnamerestart"
        android:id="@+id/button_restart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnamefinish"
        android:id="@+id/button_finish"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_result"
        android:layout_below="@+id/textView4"
        android:layout_marginBottom="70dp"
        android:clickable="false"
        />

</RelativeLayout>